--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Beam SFD, BMD & Deflection Calculator - Professional structural analysis tool"/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json"/><title>Beam Calculator</title><script defer="defer" src="./static/js/main.2492bdfc.js"></script><link href="./static/css/main.da0f1573.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="./favicon.ico" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+
+  <title>Free Online Beam Calculator | SFD, BMD, Deflection | BeamCore</title>
+  <meta name="description" content="BeamCore is a free online beam calculator for students and engineers. Instantly calculate shear force diagrams (SFD), bending moment diagrams (BMD), reactions, and deflection for beams of all types.">
+
+  <link rel="apple-touch-icon" href="./logo192.png" />
+  <link rel="manifest" href="./manifest.json" />
+  <script defer="defer" src="./static/js/main.2492bdfc.js"></script>
+  <link href="./static/css/main.da0f1573.css" rel="stylesheet" />
+</head>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+</html>
