--- a/index.html
+++ b/index.html
@@ -1,21 +1,93 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="./favicon.ico" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-
-  <title>Free Online Beam Calculator | SFD, BMD, Deflection | BeamCore</title>
-  <meta name="description" content="BeamCore is a free online beam calculator for students and engineers. Instantly calculate shear force diagrams (SFD), bending moment diagrams (BMD), reactions, and deflection for beams of all types.">
-
-  <link rel="apple-touch-icon" href="./logo192.png" />
-  <link rel="manifest" href="./manifest.json" />
-  <script defer="defer" src="./static/js/main.2492bdfc.js"></script>
-  <link href="./static/css/main.da0f1573.css" rel="stylesheet" />
-</head>
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#3b82f6"/><title>Free Beam Calculator - SFD, BMD & Deflection Analysis | Structural Engineering Tool</title><meta name="title" content="Free Beam Calculator - SFD, BMD & Deflection Analysis | Structural Engineering Tool"/><meta name="description" content="Professional beam calculator for structural analysis. Calculate shear force diagrams (SFD), bending moment diagrams (BMD), reactions, and deflection. Free online tool for engineers, students, and construction professionals."/><meta name="keywords" content="beam calculator, structural analysis, shear force diagram, bending moment diagram, deflection calculator, civil engineering, structural engineering, beam analysis, free calculator, engineering tools, construction calculator, beam design, structural design, SFD, BMD, beam reactions, beam deflection, cantilever beam, simply supported beam, fixed beam, distributed load, point load, moment load"/><meta name="author" content="Beam Calculator Pro"/><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"/><meta property="og:type" content="website"/><meta property="og:url" content="https://beam-calculator.com/"/><meta property="og:title" content="Free Beam Calculator - SFD, BMD & Deflection Analysis"/><meta property="og:description" content="Professional beam calculator for structural analysis. Calculate shear force diagrams (SFD), bending moment diagrams (BMD), reactions, and deflection. Free online tool for engineers and students."/><meta property="og:image" content="./og-image.png"/><meta property="og:image:width" content="1200"/><meta property="og:image:height" content="630"/><meta property="og:site_name" content="Beam Calculator Pro"/><meta property="og:locale" content="en_US"/><meta property="twitter:card" content="summary_large_image"/><meta property="twitter:url" content="https://beam-calculator.com/"/><meta property="twitter:title" content="Free Beam Calculator - SFD, BMD & Deflection Analysis"/><meta property="twitter:description" content="Professional beam calculator for structural analysis. Calculate shear force diagrams (SFD), bending moment diagrams (BMD), reactions, and deflection. Free online tool for engineers and students."/><meta property="twitter:image" content="./og-image.png"/><meta name="application-name" content="Beam Calculator Pro"/><meta name="apple-mobile-web-app-title" content="Beam Calculator"/><meta name="apple-mobile-web-app-capable" content="yes"/><meta name="apple-mobile-web-app-status-bar-style" content="default"/><meta name="format-detection" content="telephone=no"/><meta name="mobile-web-app-capable" content="yes"/><link rel="canonical" href="https://beam-calculator.com/"/><link rel="preconnect" href="https://fonts.googleapis.com"/><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json"/><link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png"/><link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png"/><link rel="mask-icon" href="./safari-pinned-tab.svg" color="#3b82f6"/><script type="application/ld+json">{
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Beam Calculator Pro",
+      "description": "Professional beam calculator for structural analysis. Calculate shear force diagrams (SFD), bending moment diagrams (BMD), reactions, and deflection.",
+      "url": "https://beam-calculator.com/",
+      "applicationCategory": "EngineeringApplication",
+      "operatingSystem": "Web Browser",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Organization",
+        "name": "Beam Calculator Pro",
+        "url": "https://beam-calculator.com/"
+      },
+      "featureList": [
+        "Shear Force Diagram (SFD)",
+        "Bending Moment Diagram (BMD)",
+        "Beam Deflection Analysis",
+        "Support Reactions Calculator",
+        "Multiple Support Types",
+        "Point Load Analysis",
+        "Distributed Load Analysis",
+        "Moment Load Analysis",
+        "Material Properties Input",
+        "Section Properties Calculator",
+        "Stress Analysis",
+        "Real-time Calculations",
+        "Interactive Visualizations",
+        "Export Results",
+        "Mobile Responsive Design"
+      ],
+      "screenshot": "https://beam-calculator.com/screenshot.png",
+      "softwareVersion": "3.0.3",
+      "datePublished": "2024-01-01",
+      "dateModified": "2024-12-19"
+    }</script><script type="application/ld+json">{
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Beam Calculator Pro",
+      "url": "https://beam-calculator.com/",
+      "logo": "https://beam-calculator.com/logo.png",
+      "description": "Professional structural engineering calculator for beam analysis and design",
+      "sameAs": [
+        "https://twitter.com/beamcalculator",
+        "https://linkedin.com/company/beam-calculator-pro"
+      ],
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "contactType": "customer service",
+        "email": "support@beam-calculator.com"
+      }
+    }</script><script type="application/ld+json">{
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "What is a beam calculator?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "A beam calculator is a tool that helps engineers and students analyze structural beams by calculating shear forces, bending moments, reactions, and deflections. It's essential for structural design and analysis."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How to calculate beam reactions?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Beam reactions are calculated using equilibrium equations. For a simply supported beam, sum of vertical forces equals zero and sum of moments equals zero. Our calculator automatically handles these calculations."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is SFD and BMD?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "SFD stands for Shear Force Diagram and BMD stands for Bending Moment Diagram. SFD shows the variation of shear force along the beam length, while BMD shows the variation of bending moment."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "Is this beam calculator free?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, our beam calculator is completely free to use. You can perform unlimited calculations for shear force, bending moment, reactions, and deflection analysis without any cost."
+          }
+        }
+      ]
+    }</script><script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script><script>function gtag(){dataLayer.push(arguments)}window.dataLayer=window.dataLayer||[],gtag("js",new Date),gtag("config","G-XXXXXXXXXX")</script><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXXXXXXXX" crossorigin="anonymous"></script><script defer="defer" src="./static/js/main.41160033.js"></script><link href="./static/css/main.6839b3e3.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
